tests/paczka1/small_fuzzy/21240018.err
Error in line 1: xkj5vOJ9hjV A192 61,3
Error in line 7: QJ0dOEmaR A192 57,4
Error in line 12: QJ0dOEmaR S335 75,3
